--- a/docs/_layouts/home.html
+++ b/docs/_layouts/home.html
@@ -1,7 +1,7 @@
 ---
 layout: articles
-heading: 'Your awesome heading'
-subheading: 'Your awesome subheading'
+heading: 'Toronto Mega Empires'
+subheading: 'Epic civilization-building board gaming in Toronto'
 banner: 'default'
 ---
 
